fix: scrollbar能监听内容大小更新 &  去掉z-index (#151)

--- a/components/select-tree/style/index.less
+++ b/components/select-tree/style/index.less
@@ -22,6 +22,7 @@
         max-width: @select-dropdown-max-width;
         max-height: @select-dropdown-max-height;
         padding: @select-dropdown-padding;
+        box-sizing: border-box;
         &.is-max-height {
             height: @select-dropdown-max-height;
         }
